public/css/style.css
body {
    font-family: sans-serif;
    font-size: small;
}

div.widget {
    width: 512px;
    padding: 8px;
    background-color: #EBEFF0;
    border: 1px solid;
    border-color: lightgray;
}

div.header {
    width: 100%;
    height: 77px;
}

#flag {
    float:left;
    width: 22%;
    height: 100%;
}

#bank_name {
    float:right;
    width: 70%;
    height: 100%;
}

input {
    margin-top: 4px;
}

div.widget h2 {
    color: gray;
    text-align: center;
}

div.result {
    line-height: 24px;
}

.current_bank_principal {
    color: gray;
}

dd.difference {
    font-weight: bold;
}

label.error {
    padding-left: 4px;
    color: red;
}

span.new_bank {
    font-weight: bold;
    color: #ED2939;
}

div.loading {
    height: 16px;
    width: 16px;
    background-image: url('../images/ajax-loader.gif')
}

div.banner {
    position: fixed;
    top: 0px;
    left: 0px;
    width: 100%;
    padding: 4px;
    text-align: center;
    background-color: rgba(255,255,0,0.3);
}

